Update locale strings, hero img fix

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -160,15 +160,15 @@
 
       .features
         %p.features-1
-          = t('kids.feature 1')
+          != t('kids.feature 1')
         %p.features-2
-          = t('kids.feature 2')
+          != t('kids.feature 2')
         %p.features-3
-          = t('kids.feature 3')
+          != t('kids.feature 3')
         %p.features-4
-          = t('kids.feature 4')
+          != t('kids.feature 4')
         %p.features-5
-          = t('kids.feature 5')
+          != t('kids.feature 5')
 
       / -# !App store buttons
       / .download
