--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -56,8 +56,8 @@
       = presenter.content.html_safe if presenter.content
     
     -# Read Chapter button
-    - if presenter.verses.present?
-      %p#read_chapter
+    - if presenter.verses.present? and !presenter.respond_to?(:subscription)
+      %h2#read_chapter
         %a.action_button_blue{href: reference_path(reference: reference.chapter_usfm.downcase)}
           = t("read reference", reference: reference.to_chapter.human)
 
