--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -458,6 +458,7 @@ article[data-setting-show-highlights="false"] .verse.highlighted.dark_bg > .labe
 
 #read_chapter
   margin-top: .5em
+  letter-spacing: 0em
 
 // `Type
 //---------------------------------------------------------------------------------------
