Tweaked the styles for the single verse page

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -474,3 +474,13 @@ article[data-setting-show-highlights="false"] .verse.highlighted.dark_bg > .labe
   dt .copy
     margin-bottom: 10px
     line-height: 18px
+
+
+// !Single verse page
+
+#main article.reader.verse-view
+  padding: 50px 50px 45px
+
+  .verse
+    display: block
+    margin: 0 0 20px
