Mobile styles for single verse page

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -1079,3 +1079,12 @@ article[data-setting-show-highlights="false"] .verse.highlighted.dark_bg > .labe
 // it can be implemented properly
 .verse_toolbar nav a.share_btn
   display: none
+
+
+// !Single verse page
+
+#main article.reader.verse-view
+
+  .verse
+    display: block
+    margin: 0 0 20px
