Uploading first pass of localized assets and redirects

--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -249,6 +249,28 @@ body.body-zh-CN
   .intro-help
     font-size: 21px
 
+body.body-pt-BR
+  .features-1,
+  .features-2,
+  .features-3,
+  .features-4,
+  .features-5
+    font-size: 18px
+    text-align: center
+
+  .features-1
+    padding-top: 10px
+  .features-2
+    padding-top: 10px
+  .features-3
+    padding-top: 5px
+  .features-4
+    padding-top: 10px
+  .features-5
+    margin-top: 5px
+  .intro-help
+    font-size: 21px    
+
 .features-1
   position: absolute
   left: 405px
