--- a/app/views/layouts/christmas.html.haml
+++ b/app/views/layouts/christmas.html.haml
@@ -1,23 +1,24 @@
 - t = Proc.new do |key, options={}|
   - I18n.t(key, options.merge(:locale => @locale))
 :ruby
-  meta_title        = t("meta.kids_app.title")
-  meta_description  = t("meta.kids_app.description")
+  meta_title        = t("campaigns.christmas.tracker title")
+  meta_description  = t("campaigns.christmas.tracker title")
   meta_url          = "#{request.protocol}#{request.host_with_port}#{request.fullpath}"
   i18n_image_dir  = ""
   i18n_css_class = "en"
   prelaunch = false
   youtube_url = "//www.youtube.com/embed/97YQAoCjpcs?rel=0"
   facebook_locale = "en_US"
+  -#TODO fix up metas for christmas tracker sharing...
 
 !!! 5
 %html
   %head
     %title= strip_tags(meta_title)
     %link{rel: "shortcut icon", href:"/favicon.ico"}
+    %link{href: "http://fonts.googleapis.com/css?family=Amatic+SC:700", rel:"stylesheet", type: "text/css"}
     %meta{charset:"utf-8"}
-    -#%meta{name: "viewport",       content: "width=device-width, target-densitydpi=160, initial-scale=1.0"}
-    -#%meta{name: "description",    content: meta_description}
+    %meta{name: "description",    content: meta_description}
     -#%meta{name: "url",            content: meta_url}
     -#%meta{property: "og:title",       content: meta_title }
     -#%meta{property: "og:url",         content: meta_url }
@@ -39,10 +40,8 @@
     -#%link{:href=> "#{request.protocol}#{request.host_with_port}/es/kids",:rel=>"alternate",:hreflang=>"es"}
     -#%link{:href=> "#{request.protocol}#{request.host_with_port}/ko/kids",:rel=>"alternate",:hreflang=>"ko"}
     -#%link{:href=> "#{request.protocol}#{request.host_with_port}/zh-CN/kids",:rel=>"alternate",:hreflang=>"zh-cn"}
-    -#%link{rel: "canonical", href: "#{request.protocol}#{request.host_with_port}/kids"}
 
     = stylesheet_link_tag "campaigns/christmas"
-    -#= javascript_include_tag "//use.typekit.net/mgk8ovf.js"
 
     :javascript
       try{Typekit.load();}catch(e){}
