--- a/app/views/layouts/christmas.html.haml
+++ b/app/views/layouts/christmas.html.haml
@@ -16,6 +16,7 @@
     %title= strip_tags(meta_title)
     %link{rel: "shortcut icon", href:"/favicon.ico"}
     %link{href: "http://fonts.googleapis.com/css?family=Amatic+SC:700", rel:"stylesheet", type: "text/css"}
+    %link{href: "http://fonts.googleapis.com/css?family=Open+Sans", rel:"stylesheet", type: "text/css"}
     %meta{charset:"utf-8"}
     %meta{name: "description",    content: meta_description}
     -#%meta{name: "url",            content: meta_url}
