--- a/app/views/versions/show.html.haml
+++ b/app/views/versions/show.html.haml
@@ -1,4 +1,12 @@
 - @title = @version.to_s
+- unless is_whitelabel_site
+  - content_for :additional_meta do
+    - locale_dir = I18n.locale.to_s.eql?("en") ? '' : '/' + I18n.locale.to_s
+    - canonicalHref = "https://www.bible.com#{locale_dir}/versions/#{@version.to_param}"
+    %link{rel: "canonical", href: canonicalHref}
+- content_for :meta_description do
+  = @title
+
 - content_for :sidebar do
 
   .widget-button
