fix google fonts for https, adjust css so h1 can't break layout

--- a/app/assets/stylesheets/campaigns/christmas.css
+++ b/app/assets/stylesheets/campaigns/christmas.css
@@ -763,6 +763,8 @@ body {
     font: 57px "Amatic SC",sans-serif;
     margin: 0;
     padding: 0;
+    max-height: 66px;
+    overflow: hidden;
 }
 
 .star {
