update localization string for version counts, language counts

--- a/app/views/campaigns/christmas/index.html.haml
+++ b/app/views/campaigns/christmas/index.html.haml
@@ -45,7 +45,7 @@
         %h3
           = t('campaigns.christmas.download')
         %span
-          = t('campaigns.christmas.versions')
+          = t('campaigns.christmas.versions', version_count: "1000", language_count: "700+")
           %br
           = t('campaigns.christmas.tagline')
 
