--- a/app/views/layouts/christmas.html.haml
+++ b/app/views/layouts/christmas.html.haml
@@ -15,8 +15,8 @@
   %head
     %title= strip_tags(meta_title)
     %link{rel: "shortcut icon", href:"/favicon.ico"}
-    %link{href: "https://fonts.googleapis.com/css?family=Amatic+SC:700", rel:"stylesheet", type: "text/css"}
-    %link{href: "https://fonts.googleapis.com/css?family=Open+Sans", rel:"stylesheet", type: "text/css"}
+    %link{href: "//fonts.googleapis.com/css?family=Amatic+SC:700", rel:"stylesheet", type: "text/css"}
+    %link{href: "//fonts.googleapis.com/css?family=Open+Sans", rel:"stylesheet", type: "text/css"}
     %meta{charset:"utf-8"}
     %meta{name: "description",    content: meta_description}
     -#%meta{name: "url",            content: meta_url}
