--- a/app/views/layouts/_primary_nav.html.haml
+++ b/app/views/layouts/_primary_nav.html.haml
@@ -22,7 +22,7 @@
     %ul
       - if current_auth
         %li#nav_primary_home{class: highlight.call(is_home_url) }
-          %a.icon{href: moments_path, "data-title" => "Home"}
+          %a.icon{href: moments_path, "data-title" => t("home")}
 
       %li#nav_primary_bible{class: highlight.call(is_bible_url) }
         %a.icon{href: bible_localized_path, "data-title" => t("bible")}
