--- a/app/views/layouts/christmas.html.haml
+++ b/app/views/layouts/christmas.html.haml
@@ -2,12 +2,9 @@
   - I18n.t(key, options.merge(:locale => @locale))
 :ruby
   meta_title        = t("campaigns.christmas.tracker title")
-  meta_description  = t("campaigns.christmas.tracker title")
+  meta_description  = t("campaigns.christmas.facebook text")
   meta_url          = "#{request.protocol}#{request.host_with_port}#{request.fullpath}"
-  i18n_image_dir  = ""
-  i18n_css_class = "en"
-  prelaunch = false
-  youtube_url = "//www.youtube.com/embed/97YQAoCjpcs?rel=0"
+  i18n_css_class = I18n.locale.to_s
   facebook_locale = "en_US"
 
 !!! 5
@@ -19,27 +16,22 @@
     %link{href: "//fonts.googleapis.com/css?family=Open+Sans", rel:"stylesheet", type: "text/css"}
     %meta{charset:"utf-8"}
     %meta{name: "description",    content: meta_description}
-    -#%meta{name: "url",            content: meta_url}
-    -#%meta{property: "og:title",       content: meta_title }
-    -#%meta{property: "og:url",         content: meta_url }
-    -#%meta{property: "og:description", content: meta_description }
-    -#%meta{property: "og:image", content: "#{url_for(asset_path('BibleAppForKids-icon-200x200.png'))}"}
-    -#%meta{property: "og:image", content: "#{url_for(asset_path('/campaign/kids/hero.png'))}"}
+    %meta{name: "url",            content: meta_url}
+    %meta{property: "og:title",       content: meta_title }
+    %meta{property: "og:url",         content: meta_url }
+    %meta{property: "og:description", content: meta_description }
+    %meta{property: "og:image", content: "#{url_for(asset_path('/campaigns/christmas/christmas-tracker.png'))}"}
     -#%meta{property: "og:locale", content: facebook_locale}
     -#%meta{property: "og:locale:alternate", content: "en_US"}
     -#%meta{property: "og:locale:alternate", content: "es_ES"}
     -#%meta{property: "og:locale:alternate", content: "ko_KR"}
     -#%meta{property: "og:locale:alternate", content: "zh_CN"}
-    -#%meta{name: "twitter:card",             content: "summary"}
-    -#%meta{name: "twitter:url",              content: meta_url}
-    -#%meta{name: "twitter:title" ,           content: meta_title}
-    -#%meta{name: "twitter:description",      content: meta_description}
-    -#%meta{name: "twitter:image",            content: "#{url_for(asset_path('BibleAppForKids-icon-120x120.png'))}"}
-    -#%meta{name: "twitter:site",             content: "@BibleAppForKids"}
-    -#%link{:href=> "#{request.protocol}#{request.host_with_port}/kids",:rel=>"alternate",:hreflang=>"en"}
-    -#%link{:href=> "#{request.protocol}#{request.host_with_port}/es/kids",:rel=>"alternate",:hreflang=>"es"}
-    -#%link{:href=> "#{request.protocol}#{request.host_with_port}/ko/kids",:rel=>"alternate",:hreflang=>"ko"}
-    -#%link{:href=> "#{request.protocol}#{request.host_with_port}/zh-CN/kids",:rel=>"alternate",:hreflang=>"zh-cn"}
+    %meta{name: "twitter:card",             content: "summary"}
+    %meta{name: "twitter:url",              content: meta_url}
+    %meta{name: "twitter:title" ,           content: meta_title}
+    %meta{name: "twitter:description",      content: t("campaigns.christmas.twitter text")}
+    %meta{name: "twitter:image",            content: "#{url_for(asset_path('/campaigns/christmas/christmas-tracker.png'))}"}
+    %meta{name: "twitter:site",             content: "@YouVersion"}
 
     = stylesheet_link_tag "campaigns/christmas"
 
@@ -57,5 +49,5 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
 
-  %body
+  %body{:class => "body-" + i18n_css_class}
     = yield
