--- a/app/views/layouts/christmas.html.haml
+++ b/app/views/layouts/christmas.html.haml
@@ -20,7 +20,7 @@
     %meta{property: "og:title",       content: meta_title }
     %meta{property: "og:url",         content: meta_url }
     %meta{property: "og:description", content: meta_description }
-    %meta{property: "og:image", content: "#{url_for(asset_path('/campaigns/christmas/christmas-tracker.png'))}"}
+    %meta{property: "og:image", content: "www.bible.com/assets/campaigns/christmas/christmas-tracker.png"}
     -#%meta{property: "og:locale", content: facebook_locale}
     -#%meta{property: "og:locale:alternate", content: "en_US"}
     -#%meta{property: "og:locale:alternate", content: "es_ES"}
@@ -30,7 +30,7 @@
     %meta{name: "twitter:url",              content: meta_url}
     %meta{name: "twitter:title" ,           content: meta_title}
     %meta{name: "twitter:description",      content: t("campaigns.christmas.twitter text")}
-    %meta{name: "twitter:image",            content: "#{url_for(asset_path('/campaigns/christmas/christmas-tracker.png'))}"}
+    %meta{name: "twitter:image",            content: "www.bible.com/assets/campaigns/christmas/christmas-tracker.png"}
     %meta{name: "twitter:site",             content: "@YouVersion"}
 
     = stylesheet_link_tag "campaigns/christmas"
