--- a/app/assets/stylesheets/campaigns/christmas.css
+++ b/app/assets/stylesheets/campaigns/christmas.css
@@ -846,6 +846,7 @@ svg.map {
     position: absolute;
     right: 80px;
     top: 100px;
+    width: 330px !important
 }
 .figures h3 {
     font-size: 12px;
