--- a/app/assets/stylesheets/campaigns/christmas.css
+++ b/app/assets/stylesheets/campaigns/christmas.css
@@ -1151,12 +1151,29 @@ div, .main, #map, .copy {
   margin: 0;
   text-align: center;
   padding: 0;
+  font-size: 14px;
 }
 
 .footer .container_12 .download {
   width: 72%;
   margin: 30px auto;
   padding: 0 0 0 22%;
+}
+
+.verse span {
+    font: 36px "fira-mono", Helvetica, Arial, sans-serif;
+}
+.figures .figure {
+    font-size:40px;
+}
+.footer .container_12 h3 {
+    font-size: 12px;
+}
+.footer .container_12 .grid_3 span {
+    font-size: 12px;
+}
+.grid_3.prefix_1.download {
+    background-position: 15px 5px !important;
 }
 
 
