--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -35,8 +35,8 @@
 = content_for?(:additional_meta) ? yield(:additional_meta) : nil
 = content_for?(:stylesheets) ? yield(:stylesheets) : nil
 
-- @native_url = session[:native_url] if session[:native_url].present?
-- @user_agent = session[:user_agent] if session[:user_agent].present?
+- @native_url ||= session[:native_url] if session[:native_url].present?
+- @user_agent ||= session[:user_agent] if session[:user_agent].present?
 - session.delete(:native_url) if session[:native_url].present?
 
 - if @native_url.present?
