--- a/app/views/widgets/_download_app.html.haml
+++ b/app/views/widgets/_download_app.html.haml
@@ -1,7 +1,7 @@
 #widget-download.widget.simple
   %div.bd
     %h3= t("download ad.title")
-    - style = "background: url(#{image_path(localized_bible_icon(58))}) no-repeat right center" if localized_bible_icon
+    - style = "background: url(#{image_path(localized_bible_icon(58))}) no-repeat right center; min-height: 58px;" if localized_bible_icon
     %p{style: style}
       = t('download ad.description copy', language_count: 700).html_safe
     %a.action_button_green{href: app_page_path}
