fix title font for ro and cs locale, adjust link to luke 2 to use default version for locale

--- a/app/assets/stylesheets/campaigns/christmas.css
+++ b/app/assets/stylesheets/campaigns/christmas.css
@@ -782,6 +782,10 @@ img[alt="YouVersion logo"] {
 .body-ru .main h1 {
     font: 32px "skippy-sharp",sans-serif;
 }
+.body-cs .main h1,
+.body-ro .main h1 {
+    font: 32px sans-serif;
+}
 
 .star {
     background:url(/assets/campaigns/christmas/star.svg) no-repeat 72px 50%;
