--- a/app/assets/stylesheets/campaigns/christmas.css
+++ b/app/assets/stylesheets/campaigns/christmas.css
@@ -782,6 +782,8 @@ img[alt="YouVersion logo"] {
 .body-ru .main h1 {
     font: 32px "skippy-sharp",sans-serif;
 }
+.body-vi .main h1,
+.body-sk .main h1,
 .body-cs .main h1,
 .body-ro .main h1 {
     font: 32px sans-serif;
